--- a/CalledGame/Base.lproj/Main.storyboard
+++ b/CalledGame/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Play Game 👾"/>
                                 <connections>
-                                    <action selector="tapLoginBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y0v-ky-AK2"/>
+                                    <action selector="tapLoginBtn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8Ey-23-jxb"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="NickName" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nH2-5W-k7S">
@@ -44,9 +44,6 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="7hW-Z6-b1i"/>
-                    <connections>
-                        <outlet property="loginBtn" destination="0yp-U9-onW" id="4KO-26-MgI"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -59,13 +56,41 @@
                     <view key="view" contentMode="scaleToFill" id="dgI-3x-5YS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QuW-2R-GjR">
+                                <rect key="frame" x="305" y="64" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="05a-mR-d1c"/>
+                                    <constraint firstAttribute="width" constant="50" id="yye-If-JGi"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VXS-fy-0aO">
+                                <rect key="frame" x="305" y="124" width="50" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="8wh-3h-m9i"/>
+                                    <constraint firstAttribute="height" constant="20" id="hou-oN-cex"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="YO9-rA-YI5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QuW-2R-GjR" firstAttribute="top" secondItem="YO9-rA-YI5" secondAttribute="top" constant="20" id="3ZH-AU-wlc"/>
+                            <constraint firstItem="VXS-fy-0aO" firstAttribute="top" secondItem="QuW-2R-GjR" secondAttribute="bottom" constant="10" id="9Y3-4p-pPT"/>
+                            <constraint firstItem="YO9-rA-YI5" firstAttribute="trailing" secondItem="VXS-fy-0aO" secondAttribute="trailing" constant="20" id="OnE-0U-gul"/>
+                            <constraint firstItem="YO9-rA-YI5" firstAttribute="trailing" secondItem="QuW-2R-GjR" secondAttribute="trailing" constant="20" id="PYl-b4-BHy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="nameLabel" destination="VXS-fy-0aO" id="8o0-zx-pOg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mZl-yE-rYp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="833" y="98"/>
+            <point key="canvasLocation" x="832.79999999999995" y="97.536945812807886"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9pf-y7-FNx">
